# TTA_BOSH

./: .gitignore  CMakeLists.txt  Makefile  README.md  app1.cpp  frame.ppm  grab  grab.cpp  ppm2bmp.cpp  raylib.h
BFMC2020.Embedded.Platform-master/include/brain/: robotstatemachine.hpp
BFMC2020.Embedded.Platform-master/src/: main.cpp
BFMC2020.Embedded.Platform-master/src/brain/: robotstatemachine.cpp
BFMC2020.Embedded.Platform-master/src/hardware/drivers/: steeringmotor.cpp
include/: CannyEdgeDetector.h  MathCore.cpp  Message.hpp  MessageHandler.hpp  SerialComManager.hpp  grab.h  serialPortHandler.hpp  webcam.h
src/: CannyEdgeDetector.cpp  MathCore.cpp  Message.cpp  MessageHandler.cpp  SerialComManager.cpp  example1.cpp  grab.cpp  main.cpp  ppm2bmp.cpp  serialPortHandler.cpp  webcam.cpp
tmpfiles/: ppm2bmp.h
